--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,8 @@ Project Name: Blank Template
 Client: Your Client
 Author: Your Name
 Developer @GA in NYC
+
+how can i create same style for all the buttons?
 */
 
 
